--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
+    "date-fns": "^4.1.0",
+    "font-awesome": "^4.7.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.9.0",
     "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
   },
